class Cid:
    def __init__(self, cid):
        self._cid = cid