@startuml Diagrama
title Diagrama Prontuario Hospitalar 

class Registro{ 
    - registro_pcte: int 
    - paciente: Paciente
    + construtor (regsitro_pcte, paciente)
    + atribui_registro ()
}
class CID{
    - cid: String  
    + construtor (cid)
}
class Paciente{
    - nome: String 
    - endereco: String 
    - documento: Int
    - nascimento: String 
    - registro_pcte: Registro
    + construtor (nome, endereco, documento, nascimento, registro)
    + mostra_paciente ()
}
class Profissional{ 
    - nome: String
    - conselho: String
    - num_conselho:String 
    + construtor (nome, tipo_conselho, numero_conselho)
    + mostra_profissional ()
}
class Leito{
    - un_internacao: String
    - tipo_leito: String
    + construtor (un_internacao, tipo_leito)
    + mostra_leito()
}
class Prescricao{
    - item: String
    - profissional: Profissional
    - registro_pcte: Registro
    + construtor (item, profissional, registro)
    + valida_medico (profissional)
}
class Atendimento {
    - evolucao: string 
    - sinais: String
    - profissional: Profissional
    - prescricao: Prescricao
    + construtor (evolucao, sinais, profissional, prescricao)
    + mostra_atendimento ()
}
class Prontuario{ 
    - cid: CID 
    - paciente: Paciente
    - profissional:Profissional
    - leito: Leito
    - prescricao: Prescricao
    - atendimento: Atendimento
    + construtor (cid, paciente, profissional, leito, prescricao, atendimento)
    + mostra_prontuario ()
}    

Prontuario*--CID
Prontuario*--Paciente
Prontuario*--Prescricao 
Prontuario*--Profissional
Prontuario*--Leito
Prontuario*--Atendimento
Atendimento --|> Profissional
Atendimento --|>Prescricao
Registro <|--|>Paciente
Prescricao --|>Profissional
Prescricao --|>Registro
